# bepasty-server

./: .gitignore  .readthedocs.yml  .travis.yml  AUTHORS  CHANGES.rst  LICENSE  MANIFEST.in  README.rst  application.wsgi  bepasty-server  bepasty-server.nix  pyproject.toml  requirements.txt  setup.cfg  setup.py  tox.ini
.github/workflows/: ci.yml
bepasty/: __init__.py  app.py  bepasty_xstatic.py  config.py  constants.py  wsgi.py
bepasty/apis/: __init__.py  lodgeit.py  rest.py
bepasty/cli/: object.py  server.py
bepasty/rest_api/: __init__.py  items.py
bepasty/static/app/css/: style.css
bepasty/static/app/js/: fileuploader.js  utils.js
bepasty/static/bepasty/css/: style.css
bepasty/static/jquery.fileupload/js/: jquery.fileupload-validate.js
bepasty/storage/: __init__.py
bepasty/storage/ceph/: __init__.py
bepasty/storage/ceph/lowlevel/: __init__.py  rados.py  rbd.py
bepasty/storage/filesystem/: __init__.py  test_data.py  test_item.py  test_meta.py  test_storage.py
bepasty/templates/: _error_403.html  _error_404.html  _layout.html  _utils.html  display.html  display_error.html  file_not_found.html  filelist.html  index.html  qr.html  redirect.html
bepasty/tests/: conftest.py  screenshots.py  test_app.py  test_data.py  test_date_funcs.py  test_http.py  test_meta.py  test_name.py  test_rest_server.py  test_storage.py  test_website.py
bepasty/utils/: _compat.py  date_funcs.py  decorators.py  formatters.py  hashing.py  html.py  http.py  name.py  permissions.py  test_date_funcs.py  test_html.py  test_http.py  test_name.py  test_website.py  upload.py
bepasty/views/: __init__.py  delete.py  display.py  download.py  filelist.py  index.py  lock.py  login.py  qr.py  setkv.py  test_upload.py  upload.py  xstatic.py
docker/: Dockerfile  README.md  autoconfig.py  init.sh
docs/: Makefile
docs/source/: conf.py  config.rst  index.rst  install-tutorial.rst  license.rst  project.rst  quickstart.rst  rest.rst  user-cli.rst  user.rst
requirements.d/: all.txt  dev.txt  prod.txt
scripts/: sdist-sign  upload-pypi
src/bepasty/: __init__.py  app.py  bepasty_xstatic.py  config.py  constants.py  settings.py  wsgi.py
src/bepasty/apis/: __init__.py  lodgeit.py  rest.py
src/bepasty/cli/: object.py  server.py
src/bepasty/static/app/css/: style.css
src/bepasty/static/app/js/: fileuploader.js  qrcode.js  utils.js
src/bepasty/storage/: __init__.py
src/bepasty/storage/filesystem/: __init__.py
src/bepasty/templates/: _layout.html  _utils.html  carousel.html  display.html  error.html  filelist.html  filelist_tableonly.html  index.html  qr.html  redirect.html
src/bepasty/tests/: conftest.py  screenshots.py  test_app.py  test_date_funcs.py  test_item.py  test_name.py  test_rest_server.py  test_storage.py  test_website.py
src/bepasty/utils/: _compat.py  date_funcs.py  decorators.py  formatters.py  hashing.py  http.py  name.py  permissions.py  upload.py
src/bepasty/views/: __init__.py  delete.py  display.py  download.py  filelist.py  index.py  login.py  modify.py  qr.py  setkv.py  upload.py  xstatic.py
