[build-system]
requires = ["setuptools>=45", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
write_to = "src/bepasty/_version.py"

[project]
name = "bepasty"
dynamic = ["version"]
license = {text="BSD 2-clause"}
authors = [{name="The Bepasty Team (see AUTHORS file)"}]
maintainers = [{name="Thomas Waldmann", email="tw@waldmann-edv.de"}]
description = "a binary pastebin / file upload service"
readme = "README.rst"
keywords = ["text", "image", "audio", "video", "binary", "pastebin", "upload", "download", "service", "wsgi", "flask"]
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Web Environment",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Framework :: Flask",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "werkzeug",
    "Flask",
    "markupsafe",
    "Pygments >= 2.12.0",
    "xstatic < 2.0.0",
    "XStatic-asciinema-player <= 2.6.1.1",
    "xstatic-bootbox >= 5.4.0, <= 5.5.1.1",
    "xstatic-bootstrap >=4.0.0.0, <= 4.5.3.1",
    "xstatic-font-awesome <= 4.7.0.0",
    "xstatic-jquery <= 3.5.1.1",
    "xstatic-jquery-ui <= 1.13.0.1",
    "xstatic-jquery-file-upload <= 10.31.0.1",
    "xstatic-pygments <= 2.9.0.1",
]

[project.scripts]
bepasty-server = "bepasty.cli.server:main"
bepasty-object = "bepasty.cli.object:main"

[project.optional-dependencies]
magic = ["python-magic"]
pillow = ["Pillow"]

[project.urls]
Homepage = "https://github.com/bepasty/bepasty-server/"
Documentation = "https://bepasty-server.readthedocs.org/"
Changelog = "https://github.com/bepasty/bepasty-server/blob/master/CHANGES.rst"

[tool.pytest.ini_options]
norecursedirs = [".eggs", ".git", ".tox", "build", ]
markers = [
    "slow",
    "needs_server",
]

[tool.flake8]
max-line-length = 120
