[metadata]
name = bepasty
version = attr: bepasty.__version__
license = BSD 2-clause
author = The Bepasty Team (see AUTHORS file)
author_email = ''
maintainer = Thomas Waldmann
maintainer_email = tw@waldmann-edv.de
description = a binary pastebin / file upload service
long_description = file: README.rst
url = 'https://github.com/bepasty/bepasty-server/'
keywords = "text image audio video binary pastebin upload download service wsgi flask"
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Web Environment
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11

[options]
package_dir =
    =src
packages = find:
include_package_data = True
zip_false = False
setup_requires =
    setuptools_scm
install_requires =
        Flask
        Pygments>=2.12.0
        xstatic
        XStatic-asciinema-player
        xstatic-bootbox>=5.4.0
        xstatic-bootstrap>=4.0.0.0,<5.0.0.0
        xstatic-font-awesome
        xstatic-jquery
        xstatic-jquery-ui
        xstatic-jquery-file-upload
        xstatic-pygments
python_requires = >=3.6

[options.packages.find]
where=src

[options.entry_points]
console_scripts =
   bepasty-server = bepasty.cli.server:main
   bepasty-object = bepasty.cli.object:main

[options.extras_require]
magic = python-magic
pillow = Pillow

[tool:pytest]
norecursedirs = .eggs .git .tox build
markers =
    slow
    needs_server
[flake8]
max-line-length = 120
